# tth

./: CMakeLists.txt  README.txt
android-studio/: .gitignore
android-studio/app/: build.gradle
android-studio/gradle/wrapper/: gradle-wrapper.properties
android-studio/ndk-build-project/: build.xml  proguard-project.txt  project.properties
android-studio/ndk-build-project/jni/: Application.mk
android-studio/tools/: inst.bat  inst.sh  sign.sh
data/: shim3.json
data/audio/samples/: a_thousand.flac  battle_prerendered.flac  battle_start.flac  big_jump.flac  blip.flac  block_door.flac  button.flac  credits_prerendered.flac  die.flac  doughnut.flac  doughnut_jump.flac  end_prerendered.flac  error.flac  footsteps.flac  gameover_prerendered.flac  hit.flac  jump.flac  level_prerendered.flac  mug.flac  special_prerendered.flac  start_prerendered.flac  title_prerendered.flac  wow.flac
data/gfx/palettes/: palette.gpl
data/misc/maps/: end.wm2  level.wm2  level10.wm2  level404.wm2  start.wm2
data/text/: English.utf8
docs/: 3rd_party.html  credits.txt
icons/: windows_icons.rc
include/: achievements.h  apple.h  area_game.h  autosave.h  battle_combo_drawer.h  battle_game.h  battle_player.h  battle_transition_in.h  battle_transition_in2.h  battle_transition_out.h  battle_transition_out2.h  battles.h  coin.h  combo.h  dialogue.h  enemies.h  general.h  globals.h  gui.h  gui_drawing_hook.h  hit.h  inventory.h  ios.h  menu.h  milestones.h  pan_camera.h  question.h  start_battle.h  stats.h  transition.h  tth.h  widgets.h
misc/: android.diff  dog-o.manifest  tth.manifest  versioninfo.rc  versioninfo.rc.french
origdata/music/: battle.flp  battle.mid  bonus.flp  bonus.mid  credits.flp  end.flp  gameover.flp  gameover.mid  gameover.mml  level.flp  level.mid  special.flp  special.mid  start.flp  start.mid  start.mml  title.flp  title.mid  trailer.flp
origdata/sfx/: battle_start.jfxr  bee_drone.jfxr  big_jump.jfxr  blip.jfxr  block_door.jfxr  button.jfxr  chest.jfxr  die.jfxr  doughnut.jfxr  doughnut_jump.jfxr  enemy_die.jfxr  error.jfxr  hit.jfxr  jump.jfxr  mug.jfxr  victory.flp
origdata/sfx/wavs/: bee_drone1.flac  bee_drone2.flac  gong.flac  kick.flac
origdata/sprites/: chest.gal  cursor.gal  doughnut.gal  heart.gal  jump.gal  mushroom.gal  walk_e.gal  walk_n.gal  walk_s.gal  walk_w.gal
shim3/: .gitignore  CMakeLists.txt  versioninfo.rc
shim3/docs/: 3rd_party.txt
shim3/include/shim3/: a_star.h  achievements.h  apple.h  audio.h  basic_types.h  cd.h  cloud.h  cpa.h  crash.h  devsettings.h  error.h  flac.h  font.h  gamecenter.h  gfx.h  gui.h  image.h  input.h  interp.h  ios.h  json.h  macosx.h  main.h  md5.h  mml.h  model.h  mt.h  pixel_font.h  primitives.h  sample.h  savetool.h  shader.h  shim.h  shim3.h  sound.h  sprite.h  steamworks.h  tilemap.h  tokenizer.h  translation.h  (+9 more)
shim3/include/shim3/internal/: audio.h  gfx.h  shim.h  util.h
shim3/include/shim3/shaders/glsl/: appear_fragment.h  default_fragment.h  default_textured_fragment.h  default_vertex.h  model_fragment.h  model_vertex.h
shim3/include/shim3/shaders/hlsl/: default_fragment.h  default_textured_fragment.h  default_vertex.h  model_fragment.h
shim3/misc/cpa/: append_data.sh  mkcpa-windows.sh  mkcpa.sh
shim3/misc/example/: example.cpp
shim3/misc/patches/: sdl_ios_audio.diff  sdl_ios_project.diff  sdl_tvos_menu.diff
shim3/misc/utils/: change_colour.cpp  compress_dir.cpp  convert_model.cpp  convert_tilemap.cpp  mkpixelfont.cpp  pack_shader.cpp  play_mml.cpp  print_channels.cpp  prune_sprite_json.cpp  randtile.cpp  savetool.c  translate.cpp  translate_dir.sh
shim3/src/: a_star.cpp  achievements.cpp  apple.M  audio.cpp  cd.cpp  cloud.cpp  cpa.cpp  crash.cpp  devsettings.cpp  error.cpp  flac.cpp  font.cpp  gamecenter.M  gfx.cpp  gui.cpp  image.cpp  input.cpp  interp.cpp  ios.M  json.cpp  macosx.M  md5.cpp  mml.cpp  model.cpp  mt19937ar.cpp  pixel_font.cpp  primitives.cpp  sample.cpp  shader.cpp  shim.cpp  sound.cpp  sprite.cpp  steamworks.cpp  tilemap.cpp  tokenizer.cpp  translation.cpp  ttf.cpp  utf8.cpp  util.cpp  vertex_cache.cpp  (+4 more)
src/: achievements.cpp  area_game.cpp  autosave.cpp  battle_combo_drawer.cpp  battle_game.cpp  battle_player.cpp  battle_transition_in.cpp  battle_transition_in2.cpp  battle_transition_out.cpp  battle_transition_out2.cpp  battles.cpp  coin.cpp  combo.cpp  dialogue.cpp  enemies.cpp  general.cpp  globals.cpp  gui.cpp  gui_drawing_hook.cpp  hit.cpp  inventory.cpp  menu.cpp  pan_camera.cpp  question.cpp  start_battle.cpp  transition.cpp  tth.cpp  widgets.cpp
tgui5/: CMakeLists.txt  versioninfo.rc
tgui5/include/tgui5/: tgui5.h  tgui5_sdl.h
tgui5/src/: tgui5.cpp  tgui5_sdl.cpp
wedge3/: CMakeLists.txt  README.txt  versioninfo.rc
wedge3/example/: CMakeLists.txt
wedge3/example/include/: area_game.h  battle_game.h  battle_player.h  battle_transition_in.h  battle_transition_in2.h  battle_transition_out.h  battle_transition_out2.h  battles.h  dialogue.h  enemies.h  globals.h  hit.h  inventory.h  transition.h
wedge3/example/src/: area_game.cpp  battle_game.cpp  battle_player.cpp  battle_transition_in.cpp  battle_transition_in2.cpp  battle_transition_out.cpp  battle_transition_out2.cpp  battles.cpp  dialogue.cpp  enemies.cpp  example.cpp  globals.cpp  hit.cpp  inventory.cpp
wedge3/include/wedge3/: a_star.h  achieve.h  area.h  area_game.h  battle_end.h  battle_enemy.h  battle_entity.h  battle_game.h  branch.h  (+53 more)
wedge3/src/: a_star.cpp  achieve.cpp  area.cpp  area_game.cpp  battle_end.cpp  battle_enemy.cpp  battle_entity.cpp  battle_game.cpp  battle_player.cpp  branch.cpp  change_angle.cpp  check_positions.cpp  chest.cpp  delay.cpp  delete_map_entity.cpp  fade.cpp  game.cpp  general.cpp  generic_callback.cpp  generic_gui.cpp  generic_immediate_callback.cpp  give_object.cpp  globals.cpp  input.cpp  inventory.cpp  look_around_input.cpp  main.cpp  map_entity.cpp  npc.cpp  offset_arc.cpp  omnipresent.cpp  onscreen_controller.cpp  pause_player_input.cpp  pause_presses.cpp  pause_sprite.cpp  pause_task.cpp  play_animation.cpp  play_music.cpp  play_sound.cpp  player_input.cpp  (+24 more)
(+156 files in other folders)
